--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.DetailActivity"></activity>
+        <activity android:name=".view.DetailActivity"
+                  android:parentActivityName=".MainActivity">
+
+
+        </activity>
     </application>
 
 </manifest>
